#22 Implements POST /users/{id}/stores
